--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   ],
   "author": "",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.7.7",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -49,7 +51,10 @@
     "@tarojs/runtime": "3.0.7",
     "@tarojs/taro": "3.0.7",
     "react": "^16.10.0",
-    "react-dom": "^16.10.0"
+    "react-dom": "^16.10.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-jsx": "^1.0.3",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
