--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "taro-swiper-tabs",
-  "version": "1.0.5",
+  "name": "ld-swiper-tabs",
+  "version": "1.1.2",
   "private": false,
   "description": "taro小程序 swiper-tabs相结合的容器骨架",
   "templateInfo": {
